tree-sitter-axiom/grammar.js
    source_file: $ => repeat($._form),

    // A file is a sequence of declarations, but an editor also has to
    // cope with a bare expression at top level (someone pasting a
    // snippet, or a REPL transcript). Accepting both keeps the tree
    // useful in those cases; the compiler rejects the second.
    _form: $ => choice(
      $._declaration,
      $._expression,
    ),

    // -----------------------------------------------------------------
    // Trivia
    // -----------------------------------------------------------------

    // AXTAGs are listed in `extras` alongside comments because they may
    // appear above any declaration and the grammar should not have to
    // thread an optional tag list through every declaration rule. They
    // are still a named node, so a query can find them, and an editor can
    // highlight `;@axiom:effect(io)` as metadata rather than as a comment.
    //
    // Matched before `comment` matters: both start with `;`, and
    // tree-sitter's lexer prefers the longer match, but being explicit
    // about the `@axiom:` prefix keeps the two from being ambiguous at
    // all.
    type_signature: $ => seq(
      '(', optional(field('visibility', 'pub')), '::',
      // `syntax_join_name` FIRST: `(:: (syntax/join wrap nm) ...)` is a
      // joined declaration name inside a template, and `_expression`
      // would take it as an ordinary application of `syntax/join` to
      // two arguments - a tree that says the wrong thing about the
      // same bytes.
      field('subject', choice($.syntax_join_name, $._expression)),
      field('type', $._type), ')',
    ),

    // `(fn (name params...) body)` or `(define name body)`.
    //
    // Both spellings exist and `fn` is the modern one; they are the same
    // node here because an editor has no reason to distinguish them and
    // every reason to highlight them identically.
    function_definition: $ => seq(
      '(',
      optional(field('visibility', 'pub')), choice('fn', 'define'),
      choice(
        // `(fn (name p1 p2) body)` - the parenthesised form, which is
        // also how a nullary function is written: `(fn (main) ...)`.
        // The name may also be the query form `(syntax/join a b)`
        // (MAC-CAP-5), standing in for the identifier a declaration
        // macro computes at instantiation.
        seq('(', field('name', choice($.identifier, $.syntax_join_name)),
            repeat(field('parameter', $._pattern)), ')'),
        // `(fn name body)` - a named constant.
        field('name', $.identifier),
      ),
      repeat(field('body', $._expression)),
      ')',
    ),

    // `(data Name (tyvars...) (Ctor field...)...)`
    // The name may also be `(syntax/join a b)`, since `data` became a
    // declaration-macro template kind (MAC-CAP-7/8): a generated type
    // is named the same way a generated function is.
    //
    // A bare `...` stands among the constructors for the rule-form
    // repetition (MAC-LANG-16 v3): `C ...` in a template rebuilds one
    // constructor per absorbed element, and the compiler's
    // parseConstructors reads the marker as the nullary constructor
    // `(...)` already parsed as.
    struct_declaration: $ => seq(
      '(', optional(field('visibility', 'pub')), 'struct',
      field('name', choice($.identifier, $.syntax_join_name)),
      repeat(field('marker', $.identifier)),
      optional(field('type_parameters', prec.dynamic(1, $.type_parameters))),
      repeat(field('field', $.field_declaration)),
      ')',
    ),

    // `(name : Type)` with an optional `mut` before the name. The
    // parser also reads three shapes it should not - `(name Type)` with
    // no colon, a `:` whose right side is not a type, and a bare
    // `(name)` - and the checker refuses all three as AX3056, since a
    // field type it cannot classify silently leaves the block's
    // reference map. The grammar follows the parser here for the reason
    // `effect_operation` does: the fixture that pins the code has to
    // parse, and the refusal is the checker's to make, not the
    // grammar's. `(name)` alone is left out - after a struct's name it
    // is a type-parameter list, which is the reading the formatter
    // takes and this rule must not fight.
    field_declaration: $ => seq(
      '(',
      optional('mut'),
      field('name', $.identifier),
      optional(choice(
        seq(':', field('type', choice($._type, $._literal))),
        field('type', $._type),
      )),
      ')',
    ),

    // `(type Name (tyvars...) = Type)`. The `=` is optional in the
    // parser, so it is optional here.
    removed_form: $ => choice(
      seq(
        '(',
        field('keyword', $.removed_keyword),
        repeat(choice($.field_declaration, $._expression)),
        ')',
      ),
      seq(
        '(',
        field('keyword', alias($._removed_foreign, $.removed_keyword)),
        field('name', $.identifier),
        '::',
        field('type', $._type),
        '=',
        field('symbol', $.string_literal),
        ')',
      ),
    ),

    // `trait` and `impl` joined this rail on 2026-09-04. They had live
    // declaration rules here with ZERO corpus coverage for the whole
    // time they were dead in the language - both have been `AX2004`
    // since 0.6.0 - so this grammar was still telling an editor they
    // formed valid declarations while `web/src/lib/highlight.ts`
    // already listed them as removed. Two highlighters disagreeing
    // about the language is the defect; the compiler reports `AX2004`,
    // so `@error` is what both should say.
    // `cond` joined this rail when the keyword was removed (AX2004):
    // the variadic `if` covers it, so an editor must paint `(cond …)`
    // as an error the way the compiler reports it, not as the
    // conditional the `cond_expression` rule used to say it was.
    removed_keyword: _ => choice('union', 'trait', 'impl', 'cond'),
    _removed_foreign: _ => 'foreign',

    // -----------------------------------------------------------------
    // Types
    // -----------------------------------------------------------------

    _type: $ => choice(
      $.builtin_type,
      $.unit_type,
      $.type_variable,
      $.type_constructor,
      $.qualified_type,
      $.region_type,
      $.function_type,
      $.list_type,
      $.tuple_type,
      $.pointer_type,
      $.effect_type,
      // `(syntax/join a b)` where a TYPE stands - a `type` template
      // names its alias with a join, and the signature beside it has
      // to be able to write that name (MAC-CAP-8).
      $.syntax_join_name,
    ),

    builtin_type: _ => choice(...BUILTIN_TYPES),

    // `()` - two tokens, not one.
    //
    // As `token(seq('(', ')'))` this was a single lexeme, and it silently
    // broke `(type StringList () = [String])`: the empty type parameter
    // list is also `()`, but `type_parameters` is built from separate `'('`
    // and `')'` tokens, so the lexer handed it a `unit_type` it had no rule
    // for. The compiler accepts that program - `looks_like_tyvar_list`
    // returns true for an empty group - so the grammar has to as well.
    type_variable: _ => token(/[a-z][A-Za-z0-9_']*/),

    // There is no general "parenthesised type" rule, and that is not an
    // omission: `parseType` in `self_host/parser.ax` accepts a
    // parenthesised group in type position only when it is headed by `->`,
    // `*`, a comma-separated tuple, `()`, or a *capitalised*
    // name. `(a)` for a lowercase type variable is not valid Axiom, so it
    // is not valid here.
    //
    // Adding one anyway was tried and made the grammar ambiguous in two
    // places at once - `(a)` as a parenthesised variable versus a type
    // parameter list, and `(Maybe)` as a parenthesised constructor versus a
    // zero-argument application - both of which vanish once the rule is
    // dropped. `repeat` rather than `repeat1` then matches the compiler,
    // which does allow a zero-argument application.
    type_constructor: $ => choice(
      $.constructor_identifier,
      // `(Mod::T U)`: a qualified head takes arguments like a bare one
      // (`parseTypeParens` in self_host/parser.ax reads the head
      // through the same qualified tail as a bare atom).
      seq('(', field('name', choice($.constructor_identifier, $.qualified_type)), repeat(field('argument', $._type)),
          optional(field('region', $.region_annotation)), ')'),
    ),

    // `(Str @r)`, `(Vec Int @r)`, `(String @r)`, `(a @r)` - a REGION
    // ANNOTATION is the last thing inside a type's parentheses
    // (`parseTypeAtomsRgn` in self_host/parser.ax; stage S3 of
    // docs/memory-model-v2-design.md). On a constructor application it
    // is the optional trailing field above; a keyword type or a type
    // variable takes it through this rule, which is the one place the
    // grammar admits a parenthesised variable - `(a @r)` is valid Axiom
    // because the annotation is what the parentheses are for. `@` alone
    // is still not a token: the compiler refuses it as AX1001.
    region_type: $ => seq(
      '(', field('type', choice($.builtin_type, $.type_variable, $.function_type, $.list_type)),
      field('region', $.region_annotation), ')',
    ),

    region_annotation: _ => token(/@[a-z][A-Za-z0-9_']*/),

    // `(-> A B C)` - n-ary in the source, curried in the compiler.
    function_type: $ => seq('(', '->', repeat(field('operand', $._type)), ')'),

    // `[T]`
    _pattern: $ => choice(
      $.wildcard_pattern,
      $._literal,
      $.identifier,
      $.constructor_pattern,
      $.parenthesized_pattern,
      $.tuple_pattern,
      $.list_pattern,
      $.syntax_binders_pattern,
    ),

    // `(syntax/binders C x)` standing where a pattern ARGUMENT
    // stands (MAC-CAP-5): arity-of-C binder names spliced by the
    // expander during template instantiation.
    wildcard_pattern: _ => '_',

    // `(true)`, `(false)`, `(1)`, `(_)`, `(st)`.
    //
    // A pattern in this language is PARSED as an expression and only
    // then read as a pattern (`parseArmPattern` falls back to
    // `parseExpr`), so the nullary-constructor spelling `(Nil)` is
    // available to a literal too, and the compiler accepts it:
    //
    //   (match b ((true) 1) ((false) 0))
    //
    // is a complete, running program - `true` and `false` in pattern
    // position are literal TESTS, which `emitPattern` compares the
    // scrutinee against. This grammar modelled patterns structurally
    // and had no rule for the parenthesised form, so it reported an
    // ERROR on source the compiler runs.
    //
    // Found by `tests/selfhost/365-macro-pattern-literal.ax`, the
    // fixture written to pin a macro-hygiene bug about exactly these
    // two names. No file in the repository had used the form before
    // it, which is why 243 of 244 parsed and this did not - the same
    // sentence this project keeps writing.
    //
    // Unambiguous against `constructor_pattern`, which requires a
    // `constructor_identifier` (`[A-Z]...`): none of `true`, `false`,
    // a number or `_` can begin one.
    //
    // A lowercase name in the same brackets is a grouped variable and
    // BINDS (`parseArmPattern` takes the expression path for a
    // lowercase head), so it reads here as a plain `identifier`.
    // Found by `tests/selfhost/398-arm-ctor-splice.ax`, whose spliced
    // arms are built from exactly this shape. No new token: the lexer
    // already breaks the `identifier`/`constructor_identifier` tie
    // every `(Nil)` in the corpus exercises, and this adds a parser
    // alternative only where `)` follows the name.
    parenthesized_pattern: $ => seq(
      '(', field('pattern', choice($._literal, $.wildcard_pattern, $.identifier)), ')',
    ),

    // `(Cons h t)`, and nested: `(Cons h (Cons h2 t))`.
    // `(Just x)`, or the struct-variant form `(Rect { w = w, h })`.
    //
    // In the braced form a field may be bound explicitly (`w = pat`) or
    // punned (`w`, meaning `w = w`), the order need not match the
    // declaration, and a field the pattern does not name is simply not
    // bound.
    constructor_pattern: $ => seq(
      '(',
      field('constructor', $.constructor_identifier),
      choice(
        repeat(field('argument', $._pattern)),
        seq('{', repeat(seq(field('field', $.field_pattern), optional(','))), '}'),
      ),
      ')',
    ),

    _expression: $ => choice(
      $._literal,
      $.identifier,
      $.lambda,
      $.let_expression,
      $.qualified_identifier,
      $.if_expression,
      $.while_expression,
      $.for_expression,
      $.region_expression,
      $.parallel_expression,
      $.set_expression,
      $.match_expression,
      $.handle_expression,
      $.alloc_expression,
      $.sizeof_expression,
      $.alignof_expression,
      $.cast_expression,
      $.type_signature,
      $.struct_construction,
      $.block,
      $.list_literal,
      $.removed_form,
      // Application is last so that every special form gets first refusal
      // on the token after `(`. A head that is not a keyword falls through
      // to here, which is what makes `(+ 1 2)` and `(f x)` the same shape.
      $.application,
    ),

    lambda: $ => seq(
      '(', 'lambda',
      '(', repeat(field('parameter', $._pattern)), ')',
      repeat(field('body', $._expression)),
      ')',
    ),

    let_expression: $ => seq(
      '(', 'let',
      '(', repeat(field('binding', $.let_binding)), ')',
      repeat(field('body', $._expression)),
      ')',
    ),

    // `mut` marks the binding assignable by `set`. Optional, and
    // absent means immutable, which is the default in the language.
    let_binding: $ => seq(
      '(',
      optional(field('mutable', 'mut')),
      field('pattern', $._pattern),
      field('value', $._expression),
      ')',
    ),

    if_expression: $ => seq('(', 'if', repeat(field('operand', $._expression)), ')'),

    // `Mod::name`, and `Mod.Sub::name` - the dotted path is already a
    // single identifier token, because `.` continues an identifier.
    while_expression: $ => seq(
      '(', 'while',
      field('condition', $._expression),
      repeat(field('body', $._expression)),
      ')',
    ),

    // `(for i in lo..hi body)`, `(for i in lo..hi by step body)`,
    // `(for x in xs body)` and `(for (x k) in xs body)`, with exactly one
    // body expression (`self_host/parser.ax`'s `parseForExpr`). `..`
    // marks a range and `by` its step. `in` and `by` are keywords only
    // here: the `word` rule lexes each as one only where this rule
    // allows it, so `(in a x)` elsewhere is still an application of an
    // identifier. The `operand` arm is the container. `..-` is the range
    // marker written before a negative end, `0..-1`, because the identifier
    // rule would otherwise read the two dots and the sign as one operator.
    for_expression: $ => seq(
      '(', 'for',
      field('binder', choice(
        $.identifier,
        seq('(', $.identifier, $.identifier, ')'),
      )),
      'in',
      choice(
        seq(
          field('start', $._expression),
          choice('..', '..-'),
          field('end', $._expression),
          optional(seq('by', field('step', $._expression))),
        ),
        seq(
          field('operand', $._expression),
        ),
      ),
      field('body', $._expression),
      ')',
    ),

    // `(region r body)` - a checked allocation scope, MM-RGN-1 of
    // docs/memory-model-v2-design.md (S2, 2026-09-03). The name is a
    // binder and the body is exactly one expression
    // (`self_host/parser.ax`'s `parseRegionExpr`); a second body is a
    // parse error in the compiler and is simply not in this grammar's
    // language either. `region` was a REMOVED keyword until this rule
    // existed - see `removed_form` above, which no longer names it.
    integer_literal: _ => token(/-?[0-9][0-9_]*/),
