tree-sitter-axiom/test/corpus/expressions.txt
================================================================
application, and an operator as an ordinary head
================================================================

(:: f Int)
(fn (f) (g (+ 1 2) x))

----------------------------------------------------------------

(source_file
  (type_signature
    (identifier)
    (builtin_type))
  (function_definition
    (identifier)
    (application
      (identifier)
      (application
        (identifier)
        (integer_literal)
        (integer_literal))
      (identifier))))

================================================================
let with several bindings
================================================================

(:: f Int)
(fn (f)
  (let ((x 1)
        (y (+ x 2)))
    (+ x y)))

----------------------------------------------------------------

(source_file
  (type_signature
    (identifier)
    (builtin_type))
  (function_definition
    (identifier)
    (let_expression
      (let_binding
        (identifier)
        (integer_literal))
      (let_binding
        (identifier)
        (application
          (identifier)
          (identifier)
          (integer_literal)))
      (application
        (identifier)
        (identifier)
        (identifier)))))

================================================================
if with three operands, and with five
================================================================

(:: f (-> Int Int))
(fn (f n)
  (if (< n 0) (if true 1 2) (== n 0) 3 0))

----------------------------------------------------------------

(source_file
  (type_signature
    (identifier)
    (function_type
      (builtin_type)
      (builtin_type)))
  (function_definition
    (identifier)
    (identifier)
    (if_expression
      (application
        (identifier)
        (identifier)
        (integer_literal))
      (if_expression
        (boolean_literal)
        (integer_literal)
        (integer_literal))
      (application
        (identifier)
        (identifier)
        (integer_literal))
      (integer_literal)
      (integer_literal))))

================================================================
match with nested constructor patterns and a wildcard
================================================================

(:: f (-> (List Int) Int))
(fn (f xs)
  (match xs
    ((Cons h (Cons h2 t)) h2)
    ((Cons _ t) 0)
    ((Nil) 0)))

----------------------------------------------------------------

(source_file
  (type_signature
    (identifier)
    (function_type
      (type_constructor
        (constructor_identifier)
        (builtin_type))
      (builtin_type)))
  (function_definition
    (identifier)
    (identifier)
    (match_expression
      (identifier)
      (match_arm
        (constructor_pattern
          (constructor_identifier)
          (identifier)
          (constructor_pattern
            (constructor_identifier)
            (identifier)
            (identifier)))
        (identifier))
      (match_arm
        (constructor_pattern
          (constructor_identifier)
          (wildcard_pattern)
          (identifier))
        (integer_literal))
      (match_arm
        (constructor_pattern
          (constructor_identifier))
        (integer_literal)))))

================================================================
parenthesised literal and wildcard patterns
================================================================

(:: f (-> Bool Int))
(fn (f b)
  (match b
    ((true) 1)
    ((false) 0)))

(:: g (-> Int Int))
(fn (g n)
  (match n
    ((1) 10)
    ((_) 20)))

----------------------------------------------------------------

(source_file
  (type_signature
    (identifier)
    (function_type
      (builtin_type)
      (builtin_type)))
  (function_definition
    (identifier)
    (identifier)
    (match_expression
      (identifier)
      (match_arm
        (parenthesized_pattern
          (boolean_literal))
        (integer_literal))
      (match_arm
        (parenthesized_pattern
          (boolean_literal))
        (integer_literal))))
  (type_signature
    (identifier)
    (function_type
      (builtin_type)
      (builtin_type)))
  (function_definition
    (identifier)
    (identifier)
    (match_expression
      (identifier)
      (match_arm
        (parenthesized_pattern
          (integer_literal))
        (integer_literal))
      (match_arm
        (parenthesized_pattern
          (wildcard_pattern))
        (integer_literal)))))

================================================================
brace block sequences expressions
================================================================

(:: main Int)
(fn (main)
  {
    (println x)
    0
  })

----------------------------------------------------------------

(source_file
  (type_signature
    (identifier)
    (builtin_type))
  (function_definition
    (identifier)
    (block
      (application
        (identifier)
        (identifier))
      (integer_literal))))

================================================================
lambda
================================================================

(:: f Int)
(fn (f) (lambda (x y) (+ x y)))

----------------------------------------------------------------

(source_file
  (type_signature
    (identifier)
    (builtin_type))
  (function_definition
    (identifier)
    (lambda
      (identifier)
      (identifier)
      (application
        (identifier)
        (identifier)
        (identifier)))))

================================================================
inline type ascription shares the signature form
================================================================

(:: f Int)
(fn (f) (:: (g 1) Int))

----------------------------------------------------------------

(source_file
  (type_signature
    (identifier)
    (builtin_type))
  (function_definition
    (identifier)
    (type_signature
      (application
        (identifier)
        (integer_literal))
      (builtin_type))))

================================================================
string escapes and character literals
================================================================

(:: f Int)
(fn (f) (println "a\tb\n\"c\"" '\n' 'x'))

----------------------------------------------------------------

(source_file
  (type_signature
    (identifier)
    (builtin_type))
  (function_definition
    (identifier)
    (application
      (identifier)
      (string_literal)
      (character_literal)
      (character_literal))))

================================================================
digit separators
================================================================

(:: f Int)
(fn (f) 1_000_000)

----------------------------------------------------------------

(source_file
  (type_signature
    (identifier)
    (builtin_type))
  (function_definition
    (identifier)
    (integer_literal)))

================================================================
while loop with a mutable binding and set
================================================================

(:: main Int)
(fn (main)
  (let ((mut i 0))
    (while (< i 3) (set i (+ i 1)))))

----------------------------------------------------------------

(source_file
  (type_signature
    subject: (identifier)
    type: (builtin_type))
  (function_definition
    name: (identifier)
    body: (let_expression
      binding: (let_binding
        pattern: (identifier)
        value: (integer_literal))
      body: (while_expression
        condition: (application
          operand: (identifier)
          operand: (identifier)
          operand: (integer_literal))
        body: (set_expression
          target: (identifier)
          value: (application
            operand: (identifier)
            operand: (identifier)
            operand: (integer_literal)))))))

================================================================
for, both shapes: a range and a container
================================================================

(:: main Int)
(fn (main)
  (let ((v vecNew))
    (for i 0 3 (for x v (println x)))))

----------------------------------------------------------------

(source_file
  (type_signature
    subject: (identifier)
    type: (builtin_type))
  (function_definition
    name: (identifier)
    body: (let_expression
      binding: (let_binding
        pattern: (identifier)
        value: (identifier))
      body: (for_expression
        binder: (identifier)
        operand: (integer_literal)
        operand: (integer_literal)
        operand: (for_expression
          binder: (identifier)
          operand: (identifier)
          operand: (application
            operand: (identifier)
            operand: (identifier)))))))

================================================================
region: a checked allocation scope, nested
================================================================

(:: main Int)
(fn (main)
  (region r (region s 0)))

----------------------------------------------------------------

(source_file
  (type_signature
    subject: (identifier)
    type: (builtin_type))
  (function_definition
    name: (identifier)
    body: (region_expression
      name: (identifier)
      body: (region_expression
        name: (identifier)
        body: (integer_literal)))))

================================================================
parallel: a region name, two bindings, one body
================================================================

(:: main Int)
(fn (main)
  (parallel p ((a 1) (b (f 2)))
    (+ a b)))

----------------------------------------------------------------

(source_file
  (type_signature
    subject: (identifier)
    type: (builtin_type))
  (function_definition
    name: (identifier)
    body: (parallel_expression
      region: (identifier)
      binding: (parallel_binding
        name: (identifier)
        value: (integer_literal))
      binding: (parallel_binding
        name: (identifier)
        value: (application
          operand: (identifier)
          operand: (integer_literal)))
      body: (application
        operand: (identifier)
        operand: (identifier)
        operand: (identifier)))))

================================================================
set writes a struct field through a dotted path
================================================================

(:: main Int)
(fn (main)
  (let ((c (Counter 10 5)))
    (set c.n 40)))

----------------------------------------------------------------

(source_file
  (type_signature
    subject: (identifier)
    type: (builtin_type))
  (function_definition
    name: (identifier)
    body: (let_expression
      binding: (let_binding
        pattern: (identifier)
        value: (application
          operand: (identifier)
          operand: (integer_literal)
          operand: (integer_literal)))
      body: (set_expression
        target: (identifier)
        value: (integer_literal)))))

================================================================
a keyword-spelled name is an identifier outside head position
================================================================

(:: g Int)
(fn (g data)
  (let ((match data))
    (h match data)))

----------------------------------------------------------------

(source_file
  (type_signature
    subject: (identifier)
    type: (builtin_type))
  (function_definition
    name: (identifier)
    parameter: (identifier)
    body: (let_expression
      binding: (let_binding
        pattern: (identifier)
        value: (identifier))
      body: (application
        operand: (identifier)
        operand: (identifier)
        operand: (identifier)))))

================================================================
region annotations on a signature, a struct field and a variable
================================================================

(struct Cell (mut s : (String @r)))
(:: lookup (-> (Vec String @r) Int (String @r)))
(fn (lookup t i) (vecGet t i))
(:: pick (-> (a @s) (Table @r) (a @r)))
(fn (pick x t) x)

----------------------------------------------------------------

(source_file
  (struct_declaration
    (identifier)
    (field_declaration
      (identifier)
      (region_type
        (builtin_type)
        (region_annotation))))
  (type_signature
    (identifier)
    (function_type
      (type_constructor
        (constructor_identifier)
        (builtin_type)
        (region_annotation))
      (builtin_type)
      (region_type
        (builtin_type)
        (region_annotation))))
  (function_definition
    (identifier)
    (identifier)
    (identifier)
    (application
      (identifier)
      (identifier)
      (identifier)))
  (type_signature
    (identifier)
    (function_type
      (region_type
        (type_variable)
        (region_annotation))
      (type_constructor
        (constructor_identifier)
        (region_annotation))
      (region_type
        (type_variable)
        (region_annotation))))
  (function_definition
    (identifier)
    (identifier)
    (identifier)
    (identifier)))

================================================================
for, new shapes: an element-index pair and a stepped range
================================================================

(:: main Int)
(fn (main)
  (let ((v vecNew))
    {
      (for (x k) v (println k))
      (for i 0 10 2 (println i))
    }))

----------------------------------------------------------------

(source_file
  (type_signature
    subject: (identifier)
    type: (builtin_type))
  (function_definition
    name: (identifier)
    body: (let_expression
      binding: (let_binding
        pattern: (identifier)
        value: (identifier))
      body: (block
        body: (for_expression
          binder: (identifier)
          binder: (identifier)
          operand: (identifier)
          operand: (application
            operand: (identifier)
            operand: (identifier)))
        body: (for_expression
          binder: (identifier)
          operand: (integer_literal)
          operand: (integer_literal)
          operand: (integer_literal)
          operand: (application
            operand: (identifier)
            operand: (identifier)))))))

================================================================
for, with `in` after the binder; `in` elsewhere is an identifier
================================================================

(:: main Int)
(fn (main)
  (let ((v vecNew))
    {
      (for x in v (println x))
      (for (x k) in v (println k))
      (for i in 0 10 2 (in i))
    }))

----------------------------------------------------------------

(source_file
  (type_signature
    subject: (identifier)
    type: (builtin_type))
  (function_definition
    name: (identifier)
    body: (let_expression
      binding: (let_binding
        pattern: (identifier)
        value: (identifier))
      body: (block
        body: (for_expression
          binder: (identifier)
          operand: (identifier)
          operand: (application
            operand: (identifier)
            operand: (identifier)))
        body: (for_expression
          binder: (identifier)
          binder: (identifier)
          operand: (identifier)
          operand: (application
            operand: (identifier)
            operand: (identifier)))
        body: (for_expression
          binder: (identifier)
          operand: (integer_literal)
          operand: (integer_literal)
          operand: (integer_literal)
          operand: (application
            operand: (identifier)
            operand: (identifier)))))))
