tree-sitter-axiom/test/corpus/removed.txt
================================================================
union declaration is consumed as one removed form
================================================================

(union Value
  (asInt : I64)
  (asFloat : F64))
(:: main Int)
(fn (main) 0)

----------------------------------------------------------------

(source_file
  (removed_form
    (removed_keyword)
    (identifier)
    (field_declaration
      (identifier)
      (builtin_type))
    (field_declaration
      (identifier)
      (builtin_type)))
  (type_signature
    (identifier)
    (builtin_type))
  (function_definition
    (identifier)
    (integer_literal)))

================================================================
foreign binding is consumed as one removed form
================================================================

(foreign printf :: (-> String Int) = "printf")
(:: main Int)
(fn (main) 0)

----------------------------------------------------------------

(source_file
  (removed_form
    (removed_keyword)
    (identifier)
    (function_type
      (builtin_type)
      (builtin_type))
    (string_literal))
  (type_signature
    (identifier)
    (builtin_type))
  (function_definition
    (identifier)
    (integer_literal)))

================================================================
cond is consumed as one removed form
================================================================

(cond
  ((< n 0) 1)
  (else 0))
(:: main Int)
(fn (main) 0)

----------------------------------------------------------------

(source_file
  (removed_form
    (removed_keyword)
    (application
      (application
        (identifier)
        (identifier)
        (integer_literal))
      (integer_literal))
    (application
      (identifier)
      (integer_literal)))
  (type_signature
    (identifier)
    (builtin_type))
  (function_definition
    (identifier)
    (integer_literal)))
